Fixed some Mixin and datagen stuff, fixed the crafting recipes for Chainmail Helmet and Chainmail Boots, and added a texture for Chainmail.

--- a/src/main/resources/firstproject.mixins.json
+++ b/src/main/resources/firstproject.mixins.json
@@ -1,10 +1,12 @@
 {
 	"required": true,
+	"minVersion": "0.8",
 	"package": "net.creepersneedhugs.firstproject.mixin",
 	"compatibilityLevel": "JAVA_21",
 	"mixins": [
 		"ExampleMixin"
 	],
+	"server": [],
 	"injectors": {
 		"defaultRequire": 1
 	}
