--- a/src/main/resources/firstproject.mixins.json
+++ b/src/main/resources/firstproject.mixins.json
@@ -1,7 +1,7 @@
 {
 	"required": true,
 	"minVersion": "0.8",
-	"package": "net.creepersneedhugs.firstproject.mixin",
+	"package": "net.remembertheporter.firstproject.mixin",
 	"compatibilityLevel": "JAVA_21",
 	"mixins": [
 		"ExampleMixin"
