--- a/src/main/resources/data/minecraft/loot_table/entities/snow_golem.json
+++ b/src/main/resources/data/minecraft/loot_table/entities/snow_golem.json
@@ -7,7 +7,7 @@
       "entries": [
         {
           "type": "minecraft:item",
-          "name": "minecraft:snow_block0",
+          "name": "minecraft:snow_block",
           "functions": [
             {
               "function": "minecraft:set_count",
